# controle-cpp

./: CMakeLists.txt  README.md
Test/: Makefile  cmake_install.cmake
Test/src/: testing.cpp
include/: communication.hpp  controller.hpp  quanser.h
isolated-tests/: .communication.cpp.swp  .communication.hpp.swp  build-comms.sh  comms-test-fpic  communication.cpp  communication.hpp  main-comms.cpp  quanser.h
server/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
server/src/: server.c
src/: communication.cpp
